--- a/freelancer-theme-master/_config.yml
+++ b/freelancer-theme-master/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
 title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
+email: nassibc@berkeley.edu
+url: https://github.com/nassib1
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
 skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+meta_author: Nassib Chaya
 
 # Google webmaster tools
 google_verify:
 
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:
+bing_verify: 
 
 # Contact form:
 # - static : pass through formspree.io to validate email sending
@@ -21,7 +21,7 @@ contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
-disqus_shortname: myshortname
+disqus_shortname: nassib
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
